--- a/imhome/index.html
+++ b/imhome/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Fucking Lights | Petr Devaikin</title>
+        <title>I'm Home | Petr Devaikin</title>
         <meta charset="UTF-8">
+        <!--meta name="description" content="Free Web tutorials"-->
+        <meta name="keywords" content="Interactive,Installation">
         <meta name="author" content="Petr Devaikin">
 
         <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
@@ -20,44 +22,30 @@
 
         <div class="content">
             <div class="project">
-                <h2 class="project__title">Fucking Lights</h2>
+                <h2 class="project__title">I'm Home</h2>
                 <div class="project__meta">
-                    February 2019
+                    March 2019
                     <p class="project__meta__supp">
                         Technology:<br/>
-                        Arduino
+                        openFrameworks<br/>
+                        Intel RealSense
                     </p>
                 </div>
                 <p class="project__desc">
-                    Fucking Lights is a light installation which creates an opportunity to experience an age-old practice in new light.
+                    The recent Jei Lee’s installation raises the question of the coincidental nature of life. Jei asked me to support her in production as a technical director and developer.
+                <p>
+                <p class="project__desc">
+                    Phrases about our relation to home are projected on a hanging piece of textile. A fan placed facing the textile makes it move, imitating the winds of change. Slight movements of the textile are recognised by an rgb-d sensor and used to trigger transitions between phrases, word by word.
                 </p>
                 <p class="project__desc">
-                    The Arduino-based device senses each sling frame movement. An impulsive stroke triggers a flash which travels along the X-shaped path.
-                </p>
-
-                <p class="project__desc">
-                    <img src="img/03.jpg"/>
-                </p>
-
-                <p class="project__desc project__desc--big-prefix">
-                    Brightness of the light visuzlizes the amplitude of the movement. Color represents the frequency.
+                    “I’m Home” was exhibited at the 5th International Exhibition on New Media Art at <a href="https://cicamuseum.com/">CICA Museum</a> in South Korea, March 29 – April 14, 2019.
                 </p>
                 <p class="project__desc">
-                    <img src="img/three.jpg" />
-                    <!--img src="img/02.gif" /-->
-
-                    <!--video width="800" height="450" controls>
-                      <source src="img/fuckinglights.mp4">
-                        Your browser does not support the video tag.
-                    </video-->
+                    <img src="img/01.jpg"/>
                 </p>
-
-                <p class="project__desc project__desc--big-prefix">
-                    The installation was exhibited at Futuristic Porn by <a href="http://pornceptual.com/">Pornceptual</a> on the 9th of February 2019 in Berlin.
-                </p>
-                <p class="project__desc">
-                    <img src="img/09.jpg"/>
-                </p>
+                <div class="project__desc">
+                    <iframe width="800" height="450" src="https://www.youtube.com/embed/3qiLwLd7gNw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </div>
         </div>
 
