--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title>Petr Devaikin</title>
         <!--meta name="viewport" content="width=device-width, initial-scale=1.0"-->
         <meta charset="UTF-8">
-        <meta name="description" content="Free Web tutorials">
-        <meta name="keywords" content="Design,Interaction,UX,Visualization,Coding,Development">
-        <meta name="author" content="John Doe">
+        <meta name="description" content="Petr Devaikin portfolio">
+        <meta name="keywords" content="Design,Interaction,UX,Visualization,Coding,Creative,Development">
+        <meta name="author" content="Petr Devaikin">
 
         <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
         <link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -66,7 +66,22 @@
             </div>
 
             <div class="project" data-type="interaction,creative,installation" data-year="2019">
-                <h2 class="project__title"><a href="x/">Installation X</a></h2>
+                <h2 class="project__title"><a href="imhome/">I'm Home</a></h2>
+                <p class="project__desc">
+                    Interactive installation wich raises the question of the coincidetal nature of life. Created in collaboration with <a href="https://www.linkedin.com/in/jeilee/">Jei Lee</a>.
+                </p>
+                <div class="project__pics">
+                    <a href="imhome/">
+                        <img src="img/imhome3.jpg" />
+                        <img src="img/imhome1.jpg" />
+                        <img src="img/imhome2.jpg" />
+                    </a>
+                </div>
+                <p class="project__meta">2019</p>
+            </div>
+
+            <div class="project" data-type="interaction,creative,installation" data-year="2019">
+                <h2 class="project__title"><a href="x/">Fucking Lights</a></h2>
                 <p class="project__desc">
                     Interactive light installation for Futuristic Porn, event by <a href="http://pornceptual.com/">Pornceptual</a>.
                 </p>
